# VoyaVPN

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts
.agents/rollouts/voyavpn-full-rewrite/: plan.md  rollout.py  spec.md
.agents/rollouts/voyavpn-shadcn-admin-style-alignment/: baseline.md  final-sweep.md  final-verification.md  plan.md  reference-contract.md  rollout.py  spec.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/voya-app/: Cargo.toml
crates/voya-app/src/: autostart.rs  backup.rs  certificates.rs  clash.rs  coregen.rs  diagnostics.rs  dns.rs  elevation.rs  exports.rs  groups.rs  hotkeys.rs  input_safety.rs  lib.rs  presets.rs  qr.rs  redaction.rs  runtime.rs  speedtest.rs  statistics.rs  sudo.rs  supervisor.rs  sysproxy.rs  templates.rs  tun.rs  updates.rs
crates/voya-app/src/profiles/: manager.rs  mod.rs  profile_ex.rs
crates/voya-app/src/routing/: manager.rs  mod.rs
crates/voya-app/src/subscriptions/: manager.rs  mod.rs  scheduler.rs
crates/voya-core/: Cargo.toml
crates/voya-core/src/: config.rs  context.rs  entities.rs  enums.rs  fmt.rs  golden.rs  groups.rs  lib.rs  protocol_common.rs  singbox.rs  xray.rs
crates/voya-db/: Cargo.toml
crates/voya-db/migrations/: 0001_fresh_schema.sql  0002_drop_core_type_columns.sql
crates/voya-db/src/: lib.rs
crates/voya-net/: Cargo.toml
crates/voya-net/src/: clash.rs  lib.rs  ruleset.rs  update.rs  webdav.rs
crates/voya-platform/: Cargo.toml
crates/voya-platform/src/: autostart.rs  coreinfo.rs  elevation.rs  hotkeys.rs  lib.rs  paths.rs  privilege.rs  process.rs  sysproxy.rs  test_support.rs  tun.rs
crates/voya-udptest/: Cargo.toml
crates/voya-udptest/src/: lib.rs
docs/: fidelity-hotspots.md  source-inventory.md
docs/adr/: 0001-target-architecture.md  0002-typed-ipc-and-events.md  0003-config-generation-parity.md  0004-platform-boundaries.md  0005-native-transparent-tunnel-backends.md  README.md
docs/release/: THIRD_PARTY_NOTICES.md  ci-secrets.md  diagnostics-privacy.md  external-evidence-checklist.md  os-smoke-matrix.md  packaging.md  rollback.md  runbook.md  signing-notarization.md
docs/ui/: tasteskill-typed-valley.md
docs/verification/: autostart-hotkeys-qr.md  backup-webdav.md  bindings.md  ci.md  clash.md  context-builder.md  coreinfo.md  cross-platform-smoke.md  db-schema.md  dns.md  golden-report.md  groups-chains.md  i18n.md  m1-profile-gate.md  m2-configgen-gate.md  m3-runtime-alpha-gate.md  m4-routing-dns-tun-gate.md  m5-services-gate.md  m6-polish-gate.md  m7-public-beta-gate.md  manual-os-smoke.md  profile-crud.md  regional-presets.md  routing.md  ruleset-geo.md  runtime-alpha.md  server-table.md  share-links.md  singbox-configgen.md  singbox-outbounds.md  speedtest.md  stable-release-gate.md  statistics.md  strategy.md  subscriptions.md  supervisor.md  system-proxy.md  tun.md  ui-polish.md  updates.md  (+2 more)
e2e/: smoke.spec.ts
e2e/fixtures/: tauri-mock.ts  vless-share-link.txt
e2e/tauri-driver/: README.md
scripts/: bindings.mjs  build-macos-native-tunnel.mjs  build-sing-box-libbox-apple.mjs  check-release-readiness.mjs  check-release-readiness.test.mjs  check-rust-test.mjs  core-assets.mjs  fetch-cores.mjs  import-resx-locales.mjs  install-sing-box-core.mjs  install-xray-core.mjs  notarize-macos-app.mjs  release-artifacts.mjs  release-artifacts.test.mjs  release-index.mjs  release-record.mjs  release-record.test.mjs  release-updater-metadata.mjs  release-updater-metadata.test.mjs  sign-macos-app.mjs  sing-box-core-installer.mjs  sing-box-core-installer.test.mjs  tauri-build.mjs  tauri-core-seeds.mjs  tauri-core-seeds.test.mjs  tauri.mjs  updater-signatures.mjs  verify-ci.mjs  verify-macos-native-tunnel.mjs  verify-release-staging.mjs  verify-release-staging.test.mjs  windows-tunnel-service.mjs  xray-core-installer.mjs  xray-core-installer.test.mjs
scripts/golden/: README.md  VoyaGoldenExportHarness.cs.example
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: macos-app.plist
src-tauri/icons/: icon.icns
src-tauri/native/macos/: README.md
src-tauri/native/macos/PacketTunnel/: Info.plist  PacketTunnelProvider.swift
src-tauri/native/macos/TunnelHelper/: Info.plist  VoyaPacketTunnelManager.swift
src-tauri/native/windows/service/: README.md  runtime-protocol.md
src-tauri/resources/core-seeds/: .gitignore  README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs  window.rs
src/assets/: brand-mark.tsx
src/components/app-shell/: app-shell.tsx  app-sidebar.tsx  data-table-surface.tsx  inline-page-error.tsx  modal-host.tsx  page-section.test.tsx  page-section.tsx  sidebar-footer.tsx  sidebar-nav-item.tsx  sidebar-section-header.tsx  status-bar.test.tsx  status-bar.tsx  title-bar.tsx  toaster.tsx  toolbar.tsx  use-acrylic-window.ts  use-window-chrome.ts  window-controls.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button-variants.ts  button.test.tsx  button.tsx  card.test.tsx  card.tsx  checkbox.tsx  dialog.test.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  label.tsx  (+12 more)
src/config/: fonts.test.ts  fonts.ts
src/i18n/: index.ts  locales.test.ts  use-i18n.ts
src/ipc/: README.md  bindings.ts  commands.ts  event-bridge.tsx  file-dialog.ts  index.ts  runtime-event-store.test.ts  runtime-event-store.ts  window.ts
src/lib/: core-types.ts  formatting.test.ts  formatting.ts  operational-redaction.test.ts  operational-redaction.ts  use-mounted-ref.test.tsx  use-mounted-ref.ts  utils.ts
src/stores/: connection-columns-store.ts  modal-store.ts  preferences-store.ts  profile-columns-store.ts  shell-store.ts  toast-store.ts
src/styles/: globals.css
src/test/: setup.ts
tests/golden/: README.md  matrix.json
(+195 files in other folders)
