[workspace]
members = [
    "crates/voya-app",
    "crates/voya-core",
    "crates/voya-db",
    "crates/voya-net",
    "crates/voya-platform",
    "crates/voya-udptest",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/voyavpn/voyavpn"
rust-version = "1.82"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-build = "2.6.2"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
voya-app = { path = "crates/voya-app" }
voya-core = { path = "crates/voya-core" }
voya-db = { path = "crates/voya-db" }
voya-net = { path = "crates/voya-net" }
voya-platform = { path = "crates/voya-platform" }
voya-udptest = { path = "crates/voya-udptest" }
zeroize = "1.8"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
