[package]
name = "voyavpn"
description = "VoyaVPN desktop shell"
default-run = "voyavpn"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata]

[lib]
name = "voyavpn_lib"
crate-type = ["rlib"]
# This crate is Tauri shell glue; lib tests live in workspace crates.
# CI excludes this target because --all-targets still forces disabled harnesses.
test = false

[[bin]]
name = "voyavpn"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2.4.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tauri-specta.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
voya-app.workspace = true
voya-core.workspace = true
voya-db.workspace = true
voya-platform.workspace = true
zeroize.workspace = true

[lints]
workspace = true
