[package]
name = "voya-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
futures-util = "0.3"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
voya-core.workspace = true
voya-db.workspace = true
voya-net.workspace = true
voya-platform.workspace = true
voya-udptest.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
base64 = "0.22"

[lints]
workspace = true
