[package]
name = "voya-app"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
futures-util = "0.3"
flate2 = "1.1"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "socks"] }
rustls = "0.23"
rustls-native-certs = "0.8"
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
specta.workspace = true
tar = "0.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
uuid = { version = "1.23", features = ["v4"] }
voya-core.workspace = true
voya-db.workspace = true
voya-net.workspace = true
voya-platform.workspace = true
voya-udptest.workspace = true
webpki-roots = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zeroize.workspace = true

[dev-dependencies]
voya-net = { workspace = true, features = ["test-utils"] }
voya-platform = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
