[package]
name = "voya-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
percent-encoding = "2.3"
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
thiserror.workspace = true
url = "2.5"

[dev-dependencies]
proptest = "1.6"

[lints]
workspace = true
