[package]
name = "voya-db"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
voya-core.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
