[package]
name = "voya-net"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
futures-util = "0.3"
percent-encoding = "2.3"
quick-xml = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "socks"] }
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
voya-core.workspace = true

[lints]
workspace = true
