[package]
name = "voya-udptest"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }

[lints]
workspace = true
